class Veiculo:
     
    def __init__(self, proprietario, registro, marca, modelo, ano, pessoa):
        self._proprietario = proprietario
        self._registro = registro
        self._marca = marca
        self._modelo = modelo
        self._ano = ano
        self._pessoa = pessoa
